# compress-it

./: .gitignore  Cargo.toml  build.sh  index.html  server.py
pkg/: compress_it.d.ts  compress_it.js  compress_it_bg.wasm  compress_it_bg.wasm.d.ts  package.json
src/: lib.rs  snappy.rs
static/: static.xcf  style.css
