[package]
name = "compress-it"
version = "0.1.0"
authors = ["Ashwin Gupta <cooldeveloper101@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
# opt-level = 's'


[dependencies]
wasm-bindgen = "0.2"
snap = "1"
flate2 = "1.0.20"
# js-sys = "0.3.50"

# [dependencies.web-sys]
# version = "0.3"
# features = [
#   "console",
#   "Blob",
# ]
